[gd_scene load_steps=18 format=2]

[ext_resource path="res://Assets/Coin.png" type="Texture" id=1]
[ext_resource path="res://Assets/CharacterAssets/Shadows/SmallShadow.png" type="Texture" id=2]
[ext_resource path="res://Items/Coin.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 13.5877

[sub_resource type="CircleShape2D" id=2]
radius = 45.0

[sub_resource type="CircleShape2D" id=14]
radius = 9.90444

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 12, 12 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 12, 0, 12, 12 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 24, 0, 12, 12 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 36, 0, 12, 12 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 12, 12 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 60, 0, 12, 12 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 72, 0, 12, 12 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Animation" id=4]
length = 2.0
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("ShadowSprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.6, 0.4 ), Vector2( 0.7, 0.5 ), Vector2( 0.6, 0.4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ItemSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -12 ), Vector2( 0, -8 ), Vector2( 0, -12 ) ]
}

[sub_resource type="Animation" id=15]
resource_name = "Pickup"
length = 0.75
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("ItemSprite:speed_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.75 ),
"transitions": PoolRealArray( 0.258816, 1 ),
"update": 0,
"values": [ 1.0, 15.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ItemSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.75 ),
"transitions": PoolRealArray( 0.189465, 1 ),
"update": 0,
"values": [ Vector2( 0, -12 ), Vector2( 0, -50 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.75 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "addCoinToPlayer"
} ]
}

[sub_resource type="Animation" id=5]
tracks/0/type = "value"
tracks/0/path = NodePath("ItemSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 0.34151, 1.659, 1 ),
"update": 0,
"values": [ Vector2( 0, -5 ), Vector2( 0, -50 ), Vector2( 0, -12 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "playFloat"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ItemSprite:speed_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}

[node name="Coin" type="KinematicBody2D"]
collision_layer = 0
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="PlayerCollision" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerCollision"]
shape = SubResource( 2 )

[node name="PickupZone" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupZone"]
shape = SubResource( 14 )

[node name="ShadowSprite" type="Sprite" parent="."]
scale = Vector2( 0.6, 0.4 )
texture = ExtResource( 2 )

[node name="ItemSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -5 )
scale = Vector2( 0.75, 0.75 )
frames = SubResource( 13 )
frame = 4
playing = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Spawn"
anims/Float = SubResource( 4 )
anims/Pickup = SubResource( 15 )
anims/Spawn = SubResource( 5 )

[connection signal="body_entered" from="PlayerCollision" to="." method="_on_PlayerCollision_body_entered"]
[connection signal="body_exited" from="PlayerCollision" to="." method="_on_PlayerCollision_body_exited"]
[connection signal="body_entered" from="PickupZone" to="." method="_on_PickupZone_body_entered"]
[connection signal="body_exited" from="PickupZone" to="." method="_on_PickupZone_body_exited"]
